fixed visibility/security issue of votes

--- a/src/style.css
+++ b/src/style.css
@@ -192,7 +192,9 @@ li {
   top: 280px;
   left: 1050px;
 }
-
+.usernames {
+  margin-top: 50px;
+}
 .chosen-cards-visible {
   color: white;
 }
